# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt
res/shaders/basic/: f_shader.fs  f_shader.fs.h  gol.cs  gol.cs.h  v_shader.vs  v_shader.vs.h  varying.def.sc  voxel.cs  voxel.cs.h
src/: ComputeManager.hpp  color.hpp  common.h  main.cpp  player.hpp  window.hpp
